fixed number_view to show information on the selected number

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <select id="pick-a-number">
       <option selected disabled></option>
     </select>
-    <div id="number">
+    <div id="number-display">
 
     </div>
   </body>
