--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <h1>Numbers</h1>
+    <h1 id="title">Numbers</h1>
     <label for="numbers">Pick a number:</label>
     <select id="pick-a-number">
       <option selected disabled></option>
