--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <select id="pick-a-number">
       <option selected disabled></option>
     </select>
+
+    <button type="button" name="about" id="about-button">About</button>
     <div id="number-display">
 
     </div>
